--- a/server.properties
+++ b/server.properties
@@ -1,9 +1,10 @@
 #Default server.proprieties
-#Sat Apr 02 18:56:07 EDT 2016
-board-width=12
+#Wed Apr 06 17:16:08 EDT 2016
+board-width=10
 port=1254
 password=
-board-height=12
-max-players=1024
+board-height=10
+max-players=8
 min-players=2
-debug-mode=true
+timer=30
+super-password=secret
