Added a loading screen, greatly improved GUI and remade many game images

--- a/res/index.properties
+++ b/res/index.properties
@@ -1,8 +1,12 @@
 #Editing this file can break the game
-cursor=/gfx/board/cursor.png
-button=/gfx/board/frame.png
-logo=/gfx/menu/logo.png
+cursor=image:gfx/cursor.png
+game-button=image:gfx/frame.png
+logo=image:gfx/logo.png
+background=image:gfx/background.png
+scoreboard=image:gfx/scoreboard.png
+chat-style=text:gfx/chat.css
+chat-background=image:gfx/chat.png
+chat-input=image:gfx/input.png
 
-click=/sfx/click.wav
+click=sound:sfx/click.wav
 
-chat=/style/chat.css
