Still working on the GUI ! It's starting to look good

--- a/res/index.properties
+++ b/res/index.properties
@@ -1,6 +1,7 @@
 #Editing this file can break the game
 cursor=image:gfx/cursor.png
 game-button=image:gfx/frame.png
+board=image:gfx/board.png
 logo=image:gfx/logo.png
 background=image:gfx/background.png
 scoreboard=image:gfx/scoreboard.png
