--- a/res/index.properties
+++ b/res/index.properties
@@ -8,5 +8,9 @@ scoreboard=image:gfx/scoreboard.png
 chat-style=text:gfx/chat.css
 chat-input=image:gfx/input.png
 
+tutorial-page-english=text:lang/tutorial/tutorial_english.html
+tutorial-page-french=text:lang/tutorial/tutorial_french.html
+tutorial-style=text:gfx/tutorial.css
+
 click=sound:sfx/click.wav
 
