Scaled the game in 16 : 9 while letting the window resizable

--- a/res/index.properties
+++ b/res/index.properties
@@ -1,4 +1,6 @@
 #Editing this file can break the game
+icon=image:gfx/icon375.png
+
 cursor=image:gfx/cursor.png
 game-button=image:gfx/frame.png
 board=image:gfx/board.png
