Added buttons to change language and french tutorial !

--- a/res/index.properties
+++ b/res/index.properties
@@ -10,6 +10,9 @@ scoreboard=image:gfx/scoreboard.png
 chat-style=text:gfx/chat.css
 chat-input=image:gfx/input.png
 
+flag-french=image:gfx/french.png
+flag-english=image:gfx/english.png
+
 tutorial-page-english=text:lang/tutorial/tutorial_english.html
 tutorial-page-french=text:lang/tutorial/tutorial_french.html
 tutorial-style=text:gfx/tutorial.css
