Web server list is now working ! Need lots of optimization and fixes but it's here !

--- a/res/index.properties
+++ b/res/index.properties
@@ -1,10 +1,12 @@
 #Editing this file can break the game
 icon=image:gfx/icon375.png
+logo=image:gfx/logo.png
+
+join-button=image:gfx/join_button.png
 
 cursor=image:gfx/cursor.png
 game-button=image:gfx/frame.png
 board=image:gfx/board.png
-logo=image:gfx/logo.png
 background=image:gfx/background.png
 scoreboard=image:gfx/scoreboard.png
 chat-style=text:gfx/chat.css
