--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,6 @@
 #Default server.proprieties
 #Wed Apr 06 17:16:08 EDT 2016
+server-name=Test server
 board-width=10
 port=1254
 password=
@@ -9,3 +10,4 @@ min-players=2
 timer=20
 super-password=secret
 log-to-disk=true
+public=true
