--- a/res/index.properties
+++ b/res/index.properties
@@ -15,6 +15,9 @@ chat-input=image:gfx/input.png
 flag-french=image:gfx/french.png
 flag-english=image:gfx/english.png
 
+normal-refresh=image:gfx/refresh_button.png
+hovered-refresh=image:gfx/refresh_button_hover.png
+
 tutorial-page-english=text:lang/tutorial/tutorial_english.html
 tutorial-page-french=text:lang/tutorial/tutorial_french.html
 tutorial-style=text:gfx/tutorial.css
