Made version 0.9, Fixed sound problem, changed tutorial style, removed the demo's delay, added a screenshot, edited list & boardsize commands

--- a/server.properties
+++ b/server.properties
@@ -1,13 +1,15 @@
 #Default server.proprieties
 #Wed Apr 06 17:16:08 EDT 2016
-server-name=Test server
-board-width=10
-port=1254
+server-name=Fun server 2
+welcome-message=Welcome to the official TrapGame server ! | Bienvenue sur le serveur TrapGame officiel !
+board-width=11
+port=-1
 password=
-board-height=10
+board-height=11
 max-players=32
 min-players=2
-timer=20
+timer=15
 super-password=secret
 log-to-disk=true
 public=true
+enable-console=true
