Fixed problem with last commit (Partially commited)

--- a/res/index.properties
+++ b/res/index.properties
@@ -22,5 +22,13 @@ tutorial-page-english=text:lang/tutorial/tutorial_english.html
 tutorial-page-french=text:lang/tutorial/tutorial_french.html
 tutorial-style=text:gfx/tutorial.css
 
-click=sound:sfx/click.wav
+click0=sound:sfx/click0.wav
+click1=sound:sfx/click1.wav
+click2=sound:sfx/click2.wav
+fail=sound:sfx/fail.wav
+
+special-click0=sound:sfx/special/click0.wav
+special-click1=sound:sfx/special/click1.wav
+special-click2=sound:sfx/special/click2.wav
+special-fail=sound:sfx/special/fail.wav
 
