--- a/res/index.properties
+++ b/res/index.properties
@@ -18,6 +18,8 @@ flag-english=image:gfx/english.png
 normal-refresh=image:gfx/refresh_button.png
 hovered-refresh=image:gfx/refresh_button_hover.png
 
+fail-icon=image:gfx/fail.png
+
 tutorial-page-english=text:lang/tutorial/tutorial_english.html
 tutorial-page-french=text:lang/tutorial/tutorial_french.html
 tutorial-style=text:gfx/tutorial.css
